[package]
name = "nanodb"
version = "0.1.0"
authors = ["Eugene Bulkin <ebulkin@caltech.edu>"]

[lib]
name = "nanodb"
path = "src/lib.rs"

[[bin]]
name = "nanodb"
path = "src/bin.rs"
doc = false

[dependencies]
rustyline = "1.0.0"
tempdir = "0.3"
byteorder = "1.0.0"
lazy_static = "0.2.2"
fern = "0.3.5"
log = "0.3.6"

[dependencies.nom]
version = "^2.1.0"
features = ["verbose-errors"]